add group kpi property

--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -43,7 +43,7 @@
 
       <a class="btn btn-primary btn-normal pull-left" style="margin:14px 0 0 3px" onclick="prepare_form_chart()"><%= t 'analytics.add_chart' %></a>
 
-      <select data-placeholder="<%= t 'analytics.view' %> *" multiple style="width:430px;" class="chosen-select" title="analy-view-select" id="chart-view">
+      <select data-placeholder="<%= t 'analytics.view' %> *" multiple style="width:430px;" class="chosen-select" title="analy-view-select" id="kpi-property-select">
         <optgroup label="客户属性">
           <option>Nike</option>
           <option>Adidas</option>
