--- a/app/assets/stylesheets/STYLE.scss
+++ b/app/assets/stylesheets/STYLE.scss
@@ -2,6 +2,8 @@ $blue:#5fa9da;
 $blue-hover:#69aef5;
 $red:#f75460;
 $red-hover:#f59b9b;
+$green:#0cb156;
+$green-hover:transparentize($green,0.4);
 
 @mixin transition($element){
   transition:$element ease-out 0.25s
@@ -24,6 +26,11 @@ $red-hover:#f59b9b;
   box-shadow:$x $y $shadow $color;
   -moz-box-shadow:$x $y $shadow $color;
   -webkit-box-shadow:$x $y $shadow $color;
+}
+@mixin text-overflow{
+  overflow:hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;
 }
 /*************************************************************  button style
 *********************************************************************************************************/
@@ -72,10 +79,10 @@ $red-hover:#f59b9b;
     }
   }
   &.btn-success{
-    background:#2fcc76;
+    background:$green;
     color:white;
     &:hover{
-      background:#3bdf81
+      background:$green-hover
     }
   }
   &.btn-warning{
