--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -101,6 +101,31 @@
   </div>
 </div>
 
+<div class="kpi-library" id="edit-attribute-block" type="attribute">
+  <div>
+    <i class="icon icon-remove" id="edit-attribute-block-remove"></i>
+
+    <div class="attribute-block" type="edit">
+      <ul>
+        <li><label>某个属性</label><i class="icon icon-trash"></i></li>
+        <li><label>某个属性</label><i class="icon icon-trash"></i></li>
+      </ul>
+    </div>
+
+    <div class="add-attribute">
+      <input placeholder="输入属性名"/>
+      <a class="btn btn-normal btn-success">添加属性</a>
+    </div>
+
+    <div class="btn-group">
+      <a class="btn btn-small" id="edit-attribute-block-cancel">取消</a>
+      <a class="btn btn-primary btn-small">保存</a>
+    </div>
+
+  </div>
+</div>
+
+
 
 
 <script type="text/javascript">
