--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,8 +36,11 @@
 *= require Entry
 *= require Log
 *= require treeview
+
 *= require STYLE
 *= require Manage-attribute
+*= require Analytics
+
 *= require_self
 
 
