--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -40,23 +40,27 @@
           <input type="radio" name="chartRadios" value="0" checked>
           <%= t 'analytics.average' %> </label>
       </div>
+      <div class="chosen-attribute">
+        <select data-placeholder="选择属性" multiple style="width:250px;" class="chosen-select " title="analy-attribute-select" id="kpi-property-select">
+          <optgroup label="客户属性">
+            <option>Nike</option>
+            <option>Adidas</option>
+            <option>NYC</option>
+            <option>Washington</option>
+          </optgroup>
+          <optgroup label="材料性质">
+            <option>cartoon</option>
+            <option>plastic</option>
+            <option>iron</option>
+            <option>human made</option>
+          </optgroup>
+        </select>
+      </div>
+
 
       <a class="btn btn-primary btn-normal pull-left" style="margin:14px 0 0 3px" onclick="prepare_form_chart()"><%= t 'analytics.add_chart' %></a>
 
-      <select data-placeholder="<%= t 'analytics.view' %> *" multiple style="width:430px;" class="chosen-select" title="analy-view-select" id="kpi-property-select">
-        <optgroup label="客户属性">
-          <option>Nike</option>
-          <option>Adidas</option>
-          <option>NYC</option>
-          <option>Washington</option>
-        </optgroup>
-        <optgroup label="材料性质">
-          <option>cartoon</option>
-          <option>plastic</option>
-          <option>iron</option>
-          <option>human made</option>
-        </optgroup>
-      </select>
+
 
     </div>
 
