--- a/app/views/kpis/_list.html.erb
+++ b/app/views/kpis/_list.html.erb
@@ -40,8 +40,9 @@
        <div class="attribute-position">
          <a class="btn btn-success edit-kpi-attribute" work_at="<%= kpi.id%>">编辑属性</a>
          <p>
-           <span>attributes1</span>
-           <span>attributes2</span>
+           <% kpi.kpi_properties.each do |p| %>
+               <span><%= p.name %></span>
+           <%end%>
          </p>
 
 
