--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -63,7 +63,7 @@
      </aside>
 </div>
 
-<%= render :partial=>'new'%>
+
 
 <div class="kpi-library" id="kpi-library">
      <div>
@@ -101,11 +101,13 @@
   <!--</div>-->
 <!--</div>-->
 
-<div class="kpi-library"  type="attribute" for="kpi" style="display:none">
-  <div style="display:none">
-    <i class="icon icon-remove"></i>
+<div class="kpi-library"  type="attribute" for="kpi" id="add-new-kpi-block">
+  <div >
+    <i class="icon icon-remove" id="remove-new-kpi-block"></i>
     <div class="select-div">
-      <select style="width:242px;" data-placeholder="* Category" class="chosen-select"  id="new-kpi-category" ></select>
+      <select style="width:242px;" data-placeholder="* Category" class="chosen-select"  id="new-kpi-category" >
+
+      </select>
     </div>
     <input type="text" placeholder="* <%= t 'manage.kpi.name'%>" id="new-kpi-name"/>
     <textarea placeholder=" <%= t 'manage.kpi.description'%>" id="new-kpi-desc"></textarea>
@@ -126,28 +128,39 @@
       </select>
     </div>
 
-    <input type="checkbox" id="is-calcu-check"/>
-    <label><%= t 'manage.kpi.is_calculate_type'%></label>
+    <div class="auto-form-label" id="auto-form-label">
+      <ul>
+        <li><input placeholder="标签"/></li>
+      </ul>
+    </div>
+    <label class="instrument-form-label">回车形成属性</label>
+    <div class="is-calculate-block">
 
-    <div class="calculate-type-box" id="calculate-type-box">
-      <div class="select-div">
-        <select class="chosen-select" data-placeholder="* <%= t 'manage.kpi.list'%>" id="is-calcu-relate" name="base">
+      <input type="checkbox" id="is-calcu-check"/>
+      <label><%= t 'manage.kpi.is_calculate_type'%></label>
 
-        </select>
+      <div class="calculate-type-box" id="calculate-type-box">
+        <div class="select-div">
+          <select class="chosen-select" data-placeholder="* <%= t 'manage.kpi.list'%>" id="is-calcu-relate" name="base">
+
+          </select>
+        </div>
+        <label sign="+">+</label>
+        <label sign="-">-</label>
+        <label sign="*">x</label>
+        <label sign="/">/</label>
+        <label sign="(">(</label>
+        <label sign=")">)</label>
+        <textarea type="text" placeholder="* <%= t 'manage.kpi.formula'%>" id="calcuType-input"></textarea>
+        <div style="display:none" id="takeCal" cal></div>
       </div>
-      <label sign="+">+</label>
-      <label sign="-">-</label>
-      <label sign="*">x</label>
-      <label sign="/">/</label>
-      <label sign="(">(</label>
-      <label sign=")">)</label>
-      <input type="text" placeholder="* <%= t 'manage.kpi.formula'%>" id="calcuType-input"/>
-      <div style="display:none" id="takeCal" cal></div>
+
     </div>
 
+
     <div class="btn-group">
-      <a class="btn btn-small">取消</a>
-      <a class="btn btn-primary btn-small">创建</a>
+      <a class="btn btn-small"  id="cancel-new-kpi-block">取消</a>
+      <a class="btn btn-primary btn-small" id="manage-kpi-add-new">创建</a>
     </div>
 
   </div>
