--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -161,7 +161,7 @@
     <i class="icon icon-remove" id="edit-attribute-block-remove"></i>
 
     <div class="attribute-block" type="edit">
-      <ul>
+      <ul id="kpi-properties">
         <li><label>某个属性</label><i class="icon icon-trash"></i></li>
         <li><label>某个属性</label><i class="icon icon-trash"></i></li>
       </ul>
@@ -169,7 +169,7 @@
 
     <div class="add-attribute">
       <input placeholder="输入属性名"/>
-      <a class="btn btn-normal btn-success">添加属性</a>
+      <a class="btn btn-normal btn-success" id="edit-attribute-block-add">添加属性</a>
     </div>
 
     <div class="btn-group">
