--- a/app/assets/stylesheets/chosen.css
+++ b/app/assets/stylesheets/chosen.css
@@ -214,11 +214,11 @@
   height: 1%;
   border: 1px solid #aaa;
   background-color: #fff;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
-  background-image: -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background-image: -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background-image: -o-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background-image: linear-gradient(#eeeeee 1%, #ffffff 15%);
+  /*background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));*/
+  /*background-image: -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background-image: -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background-image: -o-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background-image: linear-gradient(#eeeeee 1%, #ffffff 15%);*/
   cursor: text;
 }
 .chosen-container-multi .chosen-choices li {
