--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -98,8 +98,10 @@
           <a>Y</a>
         </li>
       </ul>
-      <a class="btn btn-success compare-current-btn">进行同期对比</a>
+      <a class="btn btn-success compare-current-btn" id="compare-current-btn">进行同期对比</a>
     </div>
+
+
 
     <div id="chart-point-detail" class="chart-point-detail">
       <i class="icon icon-remove chart-detail-close" id="chart-detail-close" onclick="close_chart_detail()"></i>
