--- a/app/views/kpis/access.html.erb
+++ b/app/views/kpis/access.html.erb
@@ -56,6 +56,17 @@
                         <td><%= t 'manage.kpi.is_calculate_type'%></td>
                       </tr>
                     </table>
+                    <div class="attribute-position" type="myKPI">
+                      <p kpi_id="<%= kpi.id%>">
+                        <span>sfasd</span>
+                        <span>sfasd</span>
+                        <span>sfasd</span>
+                        <span>sfasd</span>
+                        <span>sfasd</span>
+                      </p>
+
+
+                    </div>
                   </li>
               <%end if @kpis%>
             </ul>
