--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -98,7 +98,7 @@
           <a>Y</a>
         </li>
       </ul>
-      <a class="btn btn-success compare-current-btn" id="compare-current-btn">进行同期对比</a>
+      <!--<a class="btn btn-success compare-current-btn" id="compare-current-btn">进行同期对比</a>-->
     </div>
 
 
