--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -156,6 +156,7 @@
 </div>
 
 <% content_for :javascript_includes do %>
+    <%= javascript_include_tag "moment.min.js" %>
     <%= javascript_include_tag "highstock.js" %>
     <%= javascript_include_tag "exporting.js" %>
     <%= javascript_include_tag "exporting.extend.src.js" %>
