--- a/app/assets/stylesheets/Analytics.scss
+++ b/app/assets/stylesheets/Analytics.scss
@@ -24,3 +24,208 @@
     right:-6px;
   }
 }
+
+.detail-block{
+  position:absolute;
+  top:0px;
+  right:auto;
+  bottom:0px;
+  left:-999em;
+  z-index:999;
+  background:rgba(0,0,0,0.8);
+  $min-width:800px;
+  $min-height:600px;
+  min-width:$min-width;
+  min-height:$min-height;
+  .inner{
+    $height:$min-height - 30;
+    $width:$min-width - 30;
+    $title-height:57px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:$width;
+    height:$height;
+    margin-top:- $height/2;
+    margin-left:- $width/2;
+    background:#fff;
+    //remove button
+    &>i{
+      position:absolute;
+      right:-27px;
+      top:-8px;
+      cursor:pointer;
+      font-size:23px;
+      pointer-events:auto;
+      color:#fff;
+      @include transition(color);
+      &:hover{
+        color:$red;
+      }
+    }
+    //title (time,kpi,view)
+    .title{
+      width:96%;
+      margin:5px auto 10px;
+      height:$title-height;
+      border-bottom:1px solid #ddd;
+      .date{
+        font-size:26px;
+        margin-bottom:0px;
+      }
+      .kpi{
+        margin-bottom:1px;
+        @include text-overflow;
+        span{
+          &:first-of-type{
+            font-size:17px;
+            display:inline-block;
+            margin-right:8px;
+          }
+          &:nth-of-type(2){
+            font-size:11px;
+
+          }
+        }
+      }
+    }
+    //content
+    .content{
+      overflow-y:auto;
+      height:$min-height - $title-height - 50;
+      margin:0 auto;
+      width:95%;
+      position:relative;
+      $select-width:92%;
+      .select-attribute {
+        position:relative;
+        width:$select-width;
+        left:50%;
+        margin-top:6px;
+        margin-left:- $select-width/2 ;
+        &>.attribute-select{
+          width:81%;
+
+        }
+        &>.chosen-container{
+          float:left;
+          .chosen-choices{
+            overflow-y:auto;
+            max-height:60px !important;
+          }
+        }
+        &>.analyse-btn{
+          float:left;
+          width:100px;
+          font-size:12px;
+          margin:0px;
+          padding:6px 3px;
+          height:17px;
+          @include border-radius(0px,3px,3px,0);
+        }
+        &:after{
+          @include clearFloat;
+        }
+      }
+      &>.chart{
+        width:100%;
+        $height:240px;
+        height:$height;
+        position:relative;
+        .graph{
+          position:absolute;
+          width:60%;
+          height:$height;
+          left:-60px;
+        }
+        .detail{
+          $right:20px;
+          height:$height;
+          width:60%;
+          right:$right;
+
+          position:absolute;
+          z-index:99;
+          $margin-top:40px;
+          .big{
+            float:left;
+            width:51%;
+            p{
+              text-align:center;
+              &:first-of-type{
+                margin-top:$margin-top + 30;
+                font-size:15px;
+                margin-bottom:2px;
+                @include word-break;
+              }
+
+              &:nth-of-type(2){
+                margin-top:0px;
+
+                font-size:53px;
+                font-family:"helve";
+                font-weight:300;
+              }
+            }
+          }
+          .small{
+            float:left;
+            width:40%;
+            text-align:left;
+            margin-top:25px;
+            padding-left:$right + 3;
+            border-left:1px solid #ddd;
+            dl{
+              float:left;
+              width:50%;
+              margin-top:5px;
+              dt{
+                font-size:11px;
+                color:#9d9d9d;
+                margin-top:8px;
+              }
+              dd{
+                width:100%;
+                @include text-overflow;
+              }
+            }
+
+          }
+        }
+      }
+      &>table{
+        width:100%;
+        margin-top:15px;
+        border-collapse:collapse;
+        margin-bottom:10px;
+        $tr-padding:4px 3px;
+        $tr-bg:rgba(0,0,0,0.05);
+        $tr-border:1px solid #ddd;
+        thead{
+          tr{
+            border:$tr-border;
+            &:nth-of-type(odd){
+              background:$tr-bg;
+            }
+          }
+          td{
+            padding:$tr-padding;
+          }
+        }
+        tbody{
+          tr{
+            border:$tr-border;
+            &:nth-of-type(even){
+              background:$tr-bg;
+            }
+          }
+          td{
+            padding:$tr-padding;
+          }
+        }
+
+      }
+    }
+
+  }
+}
