--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -521,3 +521,12 @@ nav ul li a:hover ~ .nav-manage-sub{
 .upload-file-name>i:hover{
     color:#D95C5C;
 }
+
+/* Image style */
+#scrollUp {
+    bottom: 20px;
+    right: 20px;
+    height: 38px;  /* Height of image */
+    width: 38px; /* Width of image */
+    background: url('/assets/top.png') no-repeat;
+}
