--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -44,18 +44,6 @@
       </div>
       <div class="chosen-attribute">
         <select data-placeholder="选择属性" multiple style="width:250px;" class="chosen-select " title="analy-attribute-select" id="kpi-property-select">
-          <optgroup label="客户属性">
-            <option>Nike</option>
-            <option>Adidas</option>
-            <option>NYC</option>
-            <option>Washington</option>
-          </optgroup>
-          <optgroup label="材料性质">
-            <option>cartoon</option>
-            <option>plastic</option>
-            <option>iron</option>
-            <option>human made</option>
-          </optgroup>
         </select>
       </div>
 
@@ -102,34 +90,6 @@
     </div>
 
 
-
-    <!--<div id="chart-point-detail" class="chart-point-detail">-->
-      <!--<i class="icon icon-remove chart-detail-close" id="chart-detail-close" onclick="close_chart_detail()"></i>-->
-      <!--<select style="width:150px;" class="chosen-select" id="group-detail-select">-->
-      <!--</select>-->
-
-      <!--<div class="chart-part" id="chart-part">-->
-        <!--<canvas id="groupDetailPie" width="200" height="200"></canvas>-->
-        <!--<ul id="group-detail-ul"></ul>-->
-      <!--</div>-->
-      <!--<div id="group-detail-table" class="group-detail-table">-->
-        <!--<table>-->
-          <!--<thead>-->
-          <!--<tr>-->
-            <!--<td>名称</td>-->
-            <!--<td>当前值</td>-->
-            <!--<td>上一同期值</td>-->
-            <!--<td>同比</td>-->
-            <!--<td></td>-->
-          <!--</tr>-->
-          <!--</thead>-->
-          <!--<tbody>-->
-
-          <!--</tbody>-->
-        <!--</table>-->
-      <!--</div>-->
-    <!--</div>-->
-
     <div class="relative" id="chart-main-middle">
       <div class="chart-container " id="chart-container"></div>
     </div>
@@ -159,20 +119,12 @@
    <div class="inner">
      <i class="icon icon-remove" id="close-detail-block"></i>
      <div class="title">
-       <p class="date">2014-4-15</p>
-       <p class="kpi"><span>Attendence</span><span>Leoni Shanghai</span></p>
+       <p class="date" id="detail-date"></p>
+       <p class="kpi"><span id="detail-kpi"></span><span id="detail-view"></span></p>
      </div>
      <div class="content">
        <div class="select-attribute">
          <select data-placeholder="选择聚合属性" multiple class="chosen-select attribute-select" id="group-detail-select">
-             <option>Nike</option>
-             <option>Adidas</option>
-             <option>NYC</option>
-             <option>Washington</option>
-             <option>cartoon</option>
-             <option>plastic</option>
-             <option>iron</option>
-             <option>human made</option>
          </select>
          <a class="btn btn-primary analyse-btn" id="analyse-btn">聚合分析</a>
        </div>
