--- a/app/views/entity_groups/_left_menu.html.erb
+++ b/app/views/entity_groups/_left_menu.html.erb
@@ -8,7 +8,7 @@
   </li>
   <% @entity_groups.each do |entity_group| %>
       <li class="<%= entity_group.id==@active_entity_group_id ? 'active' : '' %>" title="<%= entity_group.name %>" number="<%= entity_group.id %>">
-        <% if entity_group.can_modify_by_user(current_user) %>
+        <% if entity_group.can_destroy_by_user(current_user) %>
             <i class="icon-trash icon-item"></i>
         <% else %>
             <i class="icon icon-columns" title="<%= t 'manage.view.desc.share' %>"></i>
