--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -16,7 +16,7 @@
              <span class="entry-target"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target_min)%></span>
            </td>
 
-           <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>"  value="<%=value%>" /></td>
+           <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>"  value="<%=value%>" disabled="disables" /></td>
 
            <td class="kpi-entry-trend"></td>
          </tr>
