fix js enter down to add kpi property

--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -181,7 +181,7 @@
     </div>
 
     <div class="add-attribute">
-      <input placeholder="输入属性名"/>
+      <input id="add-kpi-property" placeholder="输入属性名"/>
       <a class="btn btn-normal btn-success" id="edit-attribute-block-add">添加属性</a>
     </div>
 
